# zip-file-compressor

./: CLAUDE.md  README.md  _build_backend.py  main.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-01-zip-compressor.md  2026-04-17-force-jpg-plan.md
docs/superpowers/specs/: 2026-04-01-zip-compressor-design.md  2026-04-17-force-jpg-design.md
tests/: test_archive.py  test_cli.py  test_force_jpg_integration.py  test_image_compressor.py  test_image_compressor_force_jpg.py  test_models.py  test_pdf_compressor.py  test_pdf_compressor_force_jpg.py  test_pipeline.py  test_reporter.py  test_scanner.py
zip_compressor/: __init__.py  __main__.py  archive.py  models.py  pipeline.py  reporter.py  scanner.py
zip_compressor/compressors/: __init__.py  image_compressor.py  pdf_compressor.py
