[build-system]
requires = []
build-backend = "_build_backend"
backend-path = ["."]

[project]
name = "zip-compressor"
version = "0.1.0"
description = "ZIP content compressor"
requires-python = ">=3.13"
dependencies = [
    "Pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["zip_compressor"]
