[project]
name = "zip-compressor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ruff-lsp>=0.0.62",
]
